tests/semantic/fail/assign2function_return_value.c
int foo(void) {return 1;}
int main(void) {
  foo() = 2;
  return 0;
}
